--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -1982,10 +1982,10 @@
                                                             class="p-button-rounded p-button-text"></button>
                                                     </td>
                                                    
-                                                    <td *ngIf="selectedClauseList.is_editable  !== 'Y'"
+                                                    <!-- <td *ngIf="selectedClauseList.is_editable  !== 'Y'"
                                                         style="padding-left: 24px;">
-                                                        -- </td>
-                                                    <td *ngIf="selectedClauseList.is_editable  === 'Y'">
+                                                        -- </td> -->
+                                                    <td>
                                                         <div
                                                             class="flex align-items-center justify-content-center gap-2">
                                                             <button *ngIf="!editing" pButton pRipple type="button"
@@ -3431,6 +3431,175 @@
                                 <!-- Delete Commission Transc  Modal -->
                                 <div class="modal fade" id="deleteCommissionTransc" tabindex="-1" role="dialog"
                                     aria-labelledby="deleteCommissionTransc" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content" id="deleteRisk">
+                                            <div class="modal-body ">
+                                                <p class="deleteMessage mt-4 mb-4">
+                                                    {{'gis.policy.are_you_sure_you_want_to_delete' | translate}}</p>
+                                                <div class="d-flex justify-content-center mb-3">
+                                                    <button type="button" class="btn btn-primary px-5" id="delete"
+                                                        data-bs-dismiss="modal">{{'gis.policy.yes_delete' |
+                                                        translate}} </button>
+                                                </div>
+                                                <div class="d-flex justify-content-center mb-2">
+                                                    <button type="button" class="btn btn-outline-primary px-5"
+                                                        data-bs-dismiss="modal">{{'gis.policy.no_im_not' |
+                                                        translate}}</button>
+                                                </div>
+
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- RISK SERVICE LIST  -->
+                       <div class="card mt-2 mb-2 riskDetailsCards">
+                        <div class="card-body">
+                            <div class="row ">
+                                <div class="col-sm-4">
+                                    <p class="subheading">{{'gis.policy.risk_service_list' | translate}}</p>
+
+                                </div>
+                                <div class="col-sm-8 d-flex justify-content-end">
+                                    <div class="row  mb-2">
+
+                                        <div class="col-sm-3" *ngIf="isRiskServiceListOpen">
+                                           
+
+                                        </div>
+                                        <div class="col-sm-3 " *ngIf="isRiskServiceListOpen">
+                                            <button type="button" id="icon" class="btn btn-primary"
+                                                data-bs-toggle="modal" data-bs-target="#addCommissionTransc"
+                                                title="Add">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </button>
+                                        </div>
+
+
+                                        <div class="col-sm-3" *ngIf="isRiskServiceListOpen">
+                                            <button type="button" id="icon" class="btn btn-primary"
+                                                data-bs-toggle="modal" id="openRiskServiceListModalButtonDelete"
+                                                [hidden]="true" data-bs-target="#deleteRiskServiceList" title="Delete">
+                                            </button>
+                                            <button type="button" id="icon" class="btn btn-primary" title="Delete">
+                                                <i class="fa-solid fa-trash-can"
+                                                    (click)="openRiskServiceListDeleteModal()"></i>
+                                            </button>
+
+                                        </div>
+                                      
+                                        <div class="col-3">
+                                            <button type="button" id="icon" class="btn btn-primary"
+                                                (click)="toggleRiskServiceList()">
+                                                <i class="fa-solid fa-chevron-down"></i>
+                                            </button>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                           
+                            <div class="collapse mt-4" id="commissionTranscDetails"
+                                [class.show]="isRiskServiceListOpen">
+
+
+                                <p-table #dt2 [value]="riskDetails" dataKey="code" selectionMode="single"
+                                    [(selection)]="selectedTransaction" [tableStyle]="{'min-width': '50rem'}"
+                                    styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable'
+                                    responsiveLayout="scroll" [autoLayout]="true" [globalFilterFields]="['propertyId']">
+
+
+                                 
+                                    <ng-template pTemplate="header">
+                                        <tr>
+                                            <th> {{'gis.policy.group' | translate}}</th>
+                                            <th> {{'gis.policy.agent_name' | translate}}</th>
+                                            <th>{{'gis.policy.account_type' | translate}}</th>
+                                            <th>{{'gis.policy.setup_rate' | translate}}</th>
+                                            <th>{{'gis.policy.used_rate' | translate}}</th>
+                                            <th> {{'gis.policy.commission_amount' | translate}}</th>
+                                            <th> {{'gis.policy.withholding_rate' | translate}}</th>
+
+                                        </tr>
+                                    </ng-template>
+
+                                    <ng-template pTemplate="body" let-riskDetails let-ri="rowIndex">
+                                        <tr [pSelectableRow]="riskDetails"
+                                            [class.p-highlight]="riskDetails === selectedTransaction"
+                                            (click)="togglePremiumDetails();getRiskClauses()">
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+
+
+
+                                        </tr>
+                                    </ng-template>
+                                </p-table>
+                                <!-- Add Commission Transaction  Modal -->
+                                <div class="modal fade" id="addRiskServiceList" tabindex="-1"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered">
+                                        <div class="modal-content">
+
+                                            <div class="modal-body">
+                                                <button type="button" #closebutton class="float-end btn-close"
+                                                    data-bs-dismiss="modal" aria-label="Close"></button>
+                                                <p class="text-start" id="applicableCommissionLabel">Applicable
+                                                    commission
+                                                </p>
+
+                                                <p-table #dt1 [value]="clientData" [tableStyle]="{'max-width': '465px'}"
+                                                    selectionMode="single" [resizableColumns]="true"
+                                                    styleClass="p-datatable-sm" responsiveLayout="scroll"
+                                                    class='ui-datatable' [autoLayout]="true" [paginator]="true"
+                                                    [rows]="5" [scrollable]="true" scrollDirection="horizontal"
+                                                    [showCurrentPageReport]="true"
+                                                    currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                                                    [globalFilterFields]="['idNumber', 'emailAddress','lastName','emailAddress']">
+
+                                                    <ng-template pTemplate="header">
+
+                                                        <tr id="product">
+                                                            <th>Description</th>
+                                                            <th>Type</th>
+                                                            <th>Trntcode</th>
+
+                                                        </tr>
+                                                    </ng-template>
+
+                                                    <ng-template let-clientData pTemplate="body">
+                                                        <tr id="productData" [pSelectableRow]=""
+                                                            (click)="loadClientDetails(clientData.id);">
+
+                                                            <td> </td>
+                                                            <td> </td>
+                                                            <td></td>
+                                                        </tr>
+                                                    </ng-template>
+
+                                                </p-table>
+                                                <br>
+                                                <!-- <button class="btn btn-primary float-end" data-bs-dismiss="modal" (click)="saveclient()">Save Details</button> -->
+                                            </div>
+
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Delete Commission Transc  Modal -->
+                                <div class="modal fade" id="deleteRiskServiceList" tabindex="-1" role="dialog"
+                                    aria-labelledby="deleteRiskServiceList" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered" role="document">
                                         <div class="modal-content" id="deleteRisk">
                                             <div class="modal-body ">
